# openbb-fmp-extension

./: .gitignore  README.md  pyproject.toml
fmp/: openbb.py  provider.py  router.py
fmp/models/: example.py
openbb_fmp_extension/: __init__.py  openbb.py  provider.py  router.py
openbb_fmp_extension/extensions/equity/: equity_router.py
openbb_fmp_extension/extensions/equity/calendar/: calendar_router.py
openbb_fmp_extension/extensions/equity/estimates/: __init__.py  estimates_router.py
openbb_fmp_extension/extensions/equity/fundamental/: __init__.py  fundamental_router.py
openbb_fmp_extension/extensions/equity/ownership/: __init__.py  ownership_router.py
openbb_fmp_extension/extensions/equity/price/: __init__.py  price_router.py
openbb_fmp_extension/extensions/etf/: etf_router.py
openbb_fmp_extension/extensions/index/: index_router.py
openbb_fmp_extension/models/: advanced_dcf.py  balance_sheet.py  calendar_dividend.py  cash_flow.py  company_rating.py  dcf.py  discounted_cashflow.py  equity_historical.py  etf_holdings.py  etf_search.py  example.py  form_13f.py  government_trades.py  historical_rating.py  income_statement.py  index_constituents.py  index_historical.py  index_historical_constituents.py  levered_dcf.py  rating.py
openbb_fmp_extension/standard_models/: advanced_dcf.py  company_rating.py  dcf.py  discounted_cashflow.py  form_13f.py  government_trades.py  historical_rating.py  index_historical_constituents.py  levered_dcf.py
openbb_fmp_extension/utils/: helpers.py
tests/: test_fmp_fetcher.py
(+14 files in other folders)
